Fix needless scrollbar problem

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -47,14 +47,9 @@ h3 {
    Layout
    ========================================================================= */
 
-html,
-body {
-  height: 100%;
-  cursor: default;
-}
-
 body {
   margin: 20px;
+  cursor: default;
 }
 
 /* =========================================================================
